--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,14 +2,21 @@ workflows:
   ios_app_store:
     name: Speekzone iOS – App Store
     max_build_duration: 60
+    instance_type: mac_mini_m1
+    
+    integrations:
+      app_store_connect: codemagic
 
     environment:
       ios_signing:
         distribution_type: app_store
+        bundle_identifier: com.speekzone.app
       vars:
-        # Update if your scheme is different (e.g., "Speekzone")
         XCODE_WORKSPACE: "ios/App/App.xcworkspace"
         XCODE_SCHEME: "App"
+      node: 18
+      xcode: latest
+      cocoapods: default
 
     scripts:
       - name: Unpack tarball if present
@@ -18,32 +25,41 @@ workflows:
             tar -xzf speekzone-complete-app.tar.gz
           fi
 
-      - name: Install Node deps & build web
+      - name: Install Node dependencies
         script: |
           npm ci
+
+      - name: Build web application
+        script: |
           npm run build
 
-      - name: Capacitor iOS add/sync
+      - name: Capacitor iOS sync
         script: |
-          if [ ! -d "ios" ]; then npx cap add ios; fi
+          if [ ! -d "ios" ]; then 
+            npx cap add ios
+          fi
           npx cap sync ios
 
-      - name: CocoaPods install (safety)
+      - name: Install CocoaPods dependencies
         script: |
           cd ios/App
           pod install
-          cd ../../
 
-      - name: Archive with Xcode
+      - name: Set up code signing
         script: |
           xcode-project use-profiles
-          xcodebuild -workspace "$XCODE_WORKSPACE" -scheme "$XCODE_SCHEME" -configuration Release -archivePath $CM_BUILD_DIR/Build/App.xcarchive archive CODE_SIGN_STYLE=Automatic
 
-      - name: Export IPA
+      - name: Build iOS IPA
         script: |
-          xcode-project build-ipa --archive-path $CM_BUILD_DIR/Build/App.xcarchive
+          xcode-project build-ipa \
+            --workspace "$XCODE_WORKSPACE" \
+            --scheme "$XCODE_SCHEME"
+
+    artifacts:
+      - build/ios/ipa/*.ipa
+      - /tmp/xcodebuild_logs/*.log
 
     publishing:
       app_store_connect:
-        auth: api_key
-        # You’ll add the API key in Codemagic UI; no secrets in YAML.
+        auth: integration
+        submit_to_testflight: true
