--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,10 +4,14 @@ workflows:
     max_build_duration: 60
     instance_type: mac_mini_m1
 
+    integrations:
+      app_store_connect: codemagic
+
     environment:
       ios_signing:
         distribution_type: app_store
         bundle_identifier: com.speekzone.app
+        provisioning_profile: speekzone_ios_distribution_2025
       vars:
         XCODE_WORKSPACE: "ios/App/App.xcworkspace"
         XCODE_SCHEME: "App"
@@ -16,37 +20,30 @@ workflows:
       cocoapods: default
 
     scripts:
-      - name: Unpack tarball if present
+      - name: Install Node dependencies (if present)
         script: |
-          if [ -f "speekzone-complete-app.tar.gz" ]; then
-            tar -xzf speekzone-complete-app.tar.gz
+          if [ -f package.json ]; then
+            npm ci || npm install
           fi
 
-      - name: Install Node dependencies
+      - name: Build web assets (Capacitor projects)
         script: |
-          npm ci || npm install
-
-      - name: Build web application
-        script: |
-          npm run build
-
-      - name: Capacitor iOS sync
-        script: |
-          if [ ! -d "ios" ]; then 
-            npx cap add ios
+          if [ -f package.json ]; then
+            npm run build || true
           fi
-          npx cap sync ios
 
-      - name: Install CocoaPods dependencies
+      - name: Sync Capacitor iOS
+        script: |
+          if command -v npx >/dev/null 2>&1; then
+            npx cap sync ios || true
+          fi
+
+      - name: Install CocoaPods
         script: |
           cd ios/App
           pod repo update
           pod install
           cd ../../
-
-      - name: Set up code signing
-        script: |
-          xcode-project use-profiles
 
       - name: Build iOS IPA
         script: |
@@ -56,10 +53,9 @@ workflows:
 
     artifacts:
       - build/ios/ipa/*.ipa
-      - /tmp/xcodebuild_logs/*.log
+      - ~/Library/Logs/gym/*.log
 
     publishing:
       app_store_connect:
         integration: "codemagic"
         submit_to_testflight: true
-
